Removed markers and fixed z-index issue with the date chooser

--- a/front-end/css/performance.css
+++ b/front-end/css/performance.css
@@ -1066,6 +1066,7 @@ body, html {
 }
 
 #date-picker {
+  z-index: 99999;
   grid-area: 2 / 1;
 }
 
